--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mssql": "^8.1.2",
     "neat-csv": "^7.0.0"
   },
   "devDependencies": {
